--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0-alpha.5",
+  "version": "2.0.0-alpha.6",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -128,10 +128,11 @@
     "clsx": "^2.0.0"
   },
   "peerDependencies": {
-    "@mantine/core": "^7.2",
-    "@mantine/dates": "^7.2",
-    "@mantine/hooks": "^7.2",
+    "@mantine/core": "^7.3",
+    "@mantine/dates": "^7.3",
+    "@mantine/hooks": "^7.3",
     "@tabler/icons-react": ">=2.23.0",
+    "dayjs": ">=1.11",
     "react": ">=18.0",
     "react-dom": ">=18.0"
   }
