--- a/turbo.json
+++ b/turbo.json
@@ -36,6 +36,7 @@
     },
     "lib:build": {
       "outputs": [
+        "styles.css",
         "dist/**",
         "locales/**"
       ]
@@ -47,6 +48,7 @@
     },
     "lib:build-lib": {
       "outputs": [
+        "styles.css",
         "dist/**"
       ]
     },
