--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.0.0-alpha.14",
+  "version": "2.0.0-alpha.15",
   "license": "MIT",
   "name": "mantine-react-table",
   "description": "A fully featured Mantine implementation of TanStack React Table V8, written from the ground up in TypeScript.",
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/KevinVandy/mantine-react-table/issues"
   },
+  "sideEffects": [
+    "*.css"
+  ],
   "main": "dist/index.cjs",
   "module": "dist/index.esm.mjs",
   "types": "dist/index.d.cts",
