--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -28,7 +28,7 @@
   ],
   "main": "dist/index.cjs",
   "module": "dist/index.esm.mjs",
-  "types": "dist/index.d.cts",
+  "types": "dist/index.esm.d.mts",
   "exports": {
     ".": {
       "import": {
@@ -82,9 +82,9 @@
     "@babel/core": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@faker-js/faker": "^8.4.1",
-    "@mantine/core": "7.5.2",
-    "@mantine/dates": "7.5.2",
-    "@mantine/hooks": "7.5.2",
+    "@mantine/core": "7.5.3",
+    "@mantine/dates": "7.5.3",
+    "@mantine/hooks": "7.5.3",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
