--- a/packages/mantine-react-table/package.json
+++ b/packages/mantine-react-table/package.json
@@ -79,62 +79,63 @@
     "storybook:dev": "storybook dev -p 6007"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
+    "@babel/core": "^7.24.3",
+    "@babel/preset-react": "^7.24.1",
     "@faker-js/faker": "^8.4.1",
-    "@mantine/core": "7.6.0",
-    "@mantine/dates": "7.6.0",
-    "@mantine/hooks": "7.6.0",
+    "@mantine/core": "7.6.2",
+    "@mantine/dates": "7.6.2",
+    "@mantine/hooks": "7.6.2",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@size-limit/preset-small-lib": "^11.0.2",
-    "@storybook/addon-a11y": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/addon-storysource": "^7.6.17",
-    "@storybook/blocks": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-vite": "^7.6.17",
+    "@size-limit/preset-small-lib": "^11.1.1",
+    "@storybook/addon-a11y": "^8.0.2",
+    "@storybook/addon-essentials": "^8.0.2",
+    "@storybook/addon-interactions": "^8.0.2",
+    "@storybook/addon-links": "^8.0.2",
+    "@storybook/addon-storysource": "^8.0.2",
+    "@storybook/blocks": "^8.0.2",
+    "@storybook/preview-api": "^8.0.2",
+    "@storybook/react": "^8.0.2",
+    "@storybook/react-vite": "^8.0.2",
     "@storybook/testing-library": "^0.2.2",
-    "@tabler/icons-react": "2.47.0",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.58",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@tabler/icons-react": "3.1.0",
+    "@types/node": "^20.11.30",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "eslint": "^8.57.0",
-    "eslint-plugin-perfectionist": "^2.5.0",
-    "mantine-contextmenu": "^7.5.0",
-    "postcss": "^8.4.35",
+    "eslint-plugin-perfectionist": "^2.7.0",
+    "mantine-contextmenu": "^7.6.2",
+    "postcss": "^8.4.37",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "rollup": "^4.12.0",
+    "rollup": "^4.13.0",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "size-limit": "^11.0.2",
-    "storybook": "^7.6.17",
-    "storybook-dark-mode": "^3.0.3",
+    "size-limit": "^11.1.1",
+    "storybook": "^8.0.2",
+    "storybook-dark-mode": "^4.0.1",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
+    "typescript": "^5.4.2",
     "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.1.4"
+    "vite": "^5.2.2"
   },
   "dependencies": {
     "@tanstack/match-sorter-utils": "8.11.8",
-    "@tanstack/react-table": "8.12.0",
-    "@tanstack/react-virtual": "3.1.2"
+    "@tanstack/react-table": "8.14.0",
+    "@tanstack/react-virtual": "3.2.0"
   },
   "peerDependencies": {
     "@mantine/core": "^7.6",
